# airaavata

./: Cargo.toml  README.md  requirements.txt  setup.py
airaavata/: prakriyaa.py
src/: dicts.rs  main.rs  prakriyaa.rs  util.rs
src/dicts/: babylon.rs
